--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,33 +8,12 @@
     android:backgroundTint="@color/white"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/txtvalor"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="120dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/txtvl"
-        android:inputType="text"
-        android:phoneNumber="false"
-        android:textColor="@color/black"
-        android:textColorHint="@color/design_default_color_on_secondary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="Deprecated" />
-
     <Button
         android:id="@+id/btnVerificar"
         android:layout_width="120dp"
         android:layout_height="50dp"
-        android:layout_marginStart="79dp"
-        android:layout_marginTop="140dp"
-        android:layout_marginEnd="232dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginEnd="150dp"
         android:layout_marginBottom="89dp"
         android:onClick="verificar"
         android:text="@string/btnVerificar"
@@ -42,100 +21,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtresultado"
         app:toggleCheckedStateOnClick="false" />
-
-    <TextView
-        android:id="@+id/txtresultado"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="260dp"
-        android:layout_marginEnd="120dp"
-        android:autofillHints="@string/txtresultado"
-        android:hint="@string/txtresultado"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtvalor" />
-
-    <TextView
-        android:id="@+id/txtresultA"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="120dp"
-        android:autofillHints="@string/txtprova"
-        android:hint="@string/txtprova"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtresultado" />
-
-    <EditText
-        android:id="@+id/txtvlA"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="120dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/txtvl2"
-        android:inputType="text"
-        android:phoneNumber="false"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtvalor"
-        tools:ignore="Deprecated" />
-
-    <EditText
-        android:id="@+id/txtvlB"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="120dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/txtvl3"
-        android:inputType="text"
-        android:phoneNumber="false"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtvlA"
-        tools:ignore="Deprecated" />
-
-    <EditText
-        android:id="@+id/txtvlC"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="120dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/txtvl4"
-        android:inputType="text"
-        android:phoneNumber="true"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtvlB"
-        tools:ignore="Deprecated" />
 
     <TextView
         android:id="@+id/txttitulo"
@@ -147,7 +33,7 @@
         android:background="@drawable/ic_launcher_background"
         android:backgroundTint="@color/design_default_color_primary"
         android:gravity="center_vertical"
-        android:text="@string/txttitulo"
+        android:text="@string/txtTitulo"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textColorHighlight="@color/white"
@@ -157,5 +43,109 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="Deprecated,TextViewEdits" />
+
+    <TextView
+        android:id="@+id/TxtCacho"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="22dp"
+        android:text="@string/txtC"
+        android:textColor="@color/black"
+        android:textColorHighlight="@color/black"
+        android:textColorHint="@color/black"
+        app:layout_constraintEnd_toStartOf="@+id/vlC"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txttitulo" />
+
+    <EditText
+        android:id="@+id/vlC"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="53dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="@string/vlC"
+        android:inputType="text"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/TxtCacho"
+        app:layout_constraintTop_toBottomOf="@+id/txttitulo" />
+
+    <TextView
+        android:id="@+id/txtRefri"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="56dp"
+        android:text="@string/txtR"
+        android:textColor="@color/black"
+        android:textColorHighlight="@color/black"
+        android:textColorHint="@color/black"
+        android:textColorLink="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TxtCacho" />
+
+    <EditText
+        android:id="@+id/vlR"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="32dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="@string/vlR"
+        android:inputType="text"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        app:layout_constraintStart_toEndOf="@+id/txtRefri"
+        app:layout_constraintTop_toBottomOf="@+id/vlC" />
+
+    <TextView
+        android:id="@+id/txtSobre"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="65dp"
+        android:text="@string/txtS"
+        android:textColor="@color/black"
+        android:textColorHighlight="@color/black"
+        android:textColorHint="@color/black"
+        android:textColorLink="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtRefri" />
+
+    <EditText
+        android:id="@+id/vlS"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="49dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="@string/vlS"
+        android:inputType="text"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtSobre"
+        app:layout_constraintTop_toBottomOf="@+id/vlR" />
+
+    <TextView
+        android:id="@+id/txttotal"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="97dp"
+        android:text="@string/txtTotal"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtSobre" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
