--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,17 @@
         android:id="@+id/btnVerificar"
         android:layout_width="120dp"
         android:layout_height="50dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginEnd="150dp"
-        android:layout_marginBottom="89dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="250dp"
+        android:layout_marginBottom="86dp"
         android:onClick="verificar"
         android:text="@string/btnVerificar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.83"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txttotal"
         app:toggleCheckedStateOnClick="false" />
 
     <TextView
@@ -147,5 +149,20 @@
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtSobre" />
+
+    <Button
+        android:id="@+id/btnTrocar"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="82dp"
+        android:layout_marginTop="97dp"
+        android:layout_marginEnd="77dp"
+        android:layout_marginBottom="85dp"
+        android:onClick="Trocar"
+        android:text="@string/btnTrocar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnVerificar"
+        app:layout_constraintTop_toBottomOf="@+id/txttotal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
